# pytxo-desktop

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ipc.rs  lib.rs  main.rs
