[workspace]
resolver = "2"
members = ["src-tauri"]

[workspace.package]
version = "0.1.1"
edition = "2021"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/Pytxo-dev/pytxo-desktop"
homepage = "https://github.com/Pytxo-dev/pytxo"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread"] }
tauri = { version = "2", features = [] }
tauri-build = "2"
tauri-plugin-shell = "2"
