[package]
name = "pytxo-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "pytxo_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "pytxo-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
serde.workspace = true
serde_json.workspace = true
tauri = { workspace = true, features = [] }
tauri-plugin-shell = { workspace = true }
tokio.workspace = true
pytxo-core = { git = "https://github.com/Pytxo-dev/pytxo", tag = "v0.1.1" }
pytxo-store = { git = "https://github.com/Pytxo-dev/pytxo", tag = "v0.1.1" }
pytxo-orchestrate = { git = "https://github.com/Pytxo-dev/pytxo", tag = "v0.1.1", features = ["sanitize"] }
